<resources>
    <string name="app_name" translatable="false">Wokconns</string>
    <string name="company" translatable="false">Wokconns</string>
    <string name="permission_pick_rationale">READ_EXTERNAL_STORAGE permission is needed to pick image.</string>
    <string name="permission_crop_rationale">WRITE_EXTERNAL_STORAGE permission is needed to save cropped image.</string>
    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="hindi">Hindi</string>
    <string name="intro_1">Hiring the best Painters for your next job is simply a click away.</string>
    <string name="intro_1_bottom">Let’s connect you to paying clients.</string>
    <string name="intro_2">We have assembled the finest tailors in town here.</string>
    <string name="intro_2_bottom">Simply sign up to get your next dress sewn.</string>
    <string name="intro_3">We have assembled here a good number of professional electricians for your next job.</string>
    <string name="intro_3_bottom">Simply sign Up to contract one.</string>
    <string name="internet_connection">Please check your internet connection.</string>
    <string name="server_error">Unable to connect to server.</string>
    <string name="closeMsg">Do you want to close Wokconns?</string>
    <string name="disclaimer_title">Disclaimer</string>
    <string name="disclaimer_message">
        Wokconns is not responsible nor reliable for transactions conducted outside
        this platform without consent from the Wokconns team.\n\n
        Wokconns is at liberty to take legal action against any artisan or
        customer that transacts outside the application.
    </string>
    <string name="yes">YES</string>
    <string name="i_understand">I understand</string>
    <string name="no">NO</string>
    <string name="jobs_completed">Jobs Completed</string>
    <string name="completion">% Completion</string>
    <string name="hr_add_on">/hr</string>
    <string name="fixed_rate_add_on">fixed rate</string>
    <string name="reviews">REVIEW(</string>
    <string name="book_artist">Book Artisan</string>
    <string name="book_msg">Are you sure to book</string>
    <string name="chats">Chats</string>
    <string name="val_comment">Please enter comment</string>
    <string name="take_image">Wokconns : Take Image From</string>
    <string name="select_picture">Select Picture</string>
    <string name="val_des">Please enter description.</string>
    <string name="val_address">Please select address.</string>
    <string name="val_title">Please enter title.</string>
    <string name="val_description">Please enter description</string>
    <string name="select_category">Select Category</string>
    <string name="val_email">Please enter email address.</string>
    <string name="location_enabled">Couldn\'t get your location. Make sure location is enabled on the device</string>
    <string name="artist_here">Artisan here</string>
    <string name="my_bookings">My Bookings</string>
    <string name="cash_payment">Cash Payment</string>
    <string name="cash_msg">Are you sure want to do cash payment?</string>
    <string name="val_category">Please select category.</string>
    <string name="val_price">Please enter price.</string>
    <string name="val_currency">Please select Currency.</string>
    <string name="val_pass">Password must contain at least six characters.</string>
    <string name="val_pass1">Renter password contain at least six characters.</string>
    <string name="val_name">Please enter name.</string>
    <string name="val_phone">Please enter phone number.</string>
    <string name="pass_not_match">Password does not match.</string>
    <string name="pending">Pending</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="completed">Completed</string>
    <string name="decline">Declined</string>
    <string name="decline_msg">Are you sure you want to decline this appointment?</string>
    <string name="waiting_artist">Waiting for artisan response</string>
    <string name="request_acc">Request accepted by artisan</string>
    <string name="invoice_generate">Invoice Generated</string>
    <string name="invoice_paid">Invoice Paid</string>
    <string name="work_in_progress">Your work in progress</string>
    <string name="booking_with">Booking With</string>
    <string name="booking_cancel_msg">Do you really want to cancel the booking with</string>
    <string name="warning_title">Warning!</string>
    <string name="booking_cancel_warning">
        Cancelling/Deleting jobs is against the Policies of Wokconns.
    </string>
    <string name="booking_cancel_warning_contd">

        \n\nYou have just TWO (2) FREE cancellations, after which you will be charged 2% of the booking price.
    </string>
    <string name="date">Date:</string>
    <string name="applied">Applied</string>
    <string name="applied1">Applied:</string>
    <string name="confirm">Confirmed</string>
    <string name="complete">Complete</string>
    <string name="in_progress">In progress</string>
    <string name="reject">Reject</string>
    <string name="reject_msg">Are you sure you want to reject the application?</string>
    <string name="confirm_msg">Are you sure you want to confirm the application?</string>
    <string name="complete_msg">Are you sure you want to complete the application?</string>
    <string name="km">KM From You</string>
    <string name="job_id">Job Id:</string>
    <string name="open">Open</string>
    <string name="not_edit_job">You can\'t edit this job because Artisan has already applied</string>
    <string name="delete">Delete</string>
    <string name="delete_job">Are you sure to delete this job?</string>
    <string name="complete_job">Are you sure to complete this job?</string>
    <string name="service">Invoice Id #</string>
    <string name="unpaid">Unpaid</string>
    <string name="paid">Paid</string>
    <string name="duration">Duration:</string>
    <string name="solve">Solve</string>
    <string name="close">Close</string>
    <string name="future_bookings">Future Bookings</string>
    <string name="all_category">All Categories</string>
    <string name="get_discount">Refer a friend</string>
    <string name="code_copy">Code Copy</string>
    <string name="my_code">Hello, this is my Referral Code</string>
    <string name="error_share">Oops!! It seems that you have not installed any sharing app.</string>
    <string name="invoice">Invoice</string>
    <string name="ic_wallet">Wallet</string>
    <string name="jobs">Post Jobs</string>
    <string name="setting">Settings</string>
    <string name="notification">Notifications</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="logout_msg">Are you sure you want to logout?</string>
    <string name="support">Support</string>
    <string name="home">Home</string>
    <string name="discover_job">Discover/Near by</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="applied_job">Applicants</string>
    <string name="search_by_artist">Search by Artisan</string>
    <string name="no_application_found">No Application Found</string>
    <string name="book_now">BOOK</string>
    <string name="quick_chat">QUICK CHAT</string>
    <string name="future_book">FUTURE BOOK</string>
    <string name="image_gallery">Image Gallery</string>
    <string name="video_gallery">Video Gallery</string>
    <string name="no_video_available">No Video Available</string>
    <string name="about">About</string>
    <string name="qualification">Qualification</string>
    <string name="skills">Skills</string>
    <string name="products">SERVICES</string>
    <string name="previous_work">Previous Work</string>
    <string name="no_chat_history_found">No Chat History Found</string>
    <string name="comment">Comment</string>
    <string name="write_your_message">Write your message</string>
    <string name="update_job">Update Job</string>
    <string name="all_categories">All Categories</string>
    <string name="title">Title</string>
    <string name="address">Address</string>
    <string name="enter_your_description">Enter Your Description</string>
    <string name="update_picture">Update Picture</string>
    <string name="update">Update</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email_id">Email Address</string>
    <string name="submit">Submit</string>
    <string name="apply_code">APPLY CODE</string>
    <string name="copy">COPY</string>
    <string name="invite_friend">Invite Friend</string>
    <string name="map">Map</string>
    <string name="no_booking_found">No Booking Found</string>
    <string name="no_notification_found">No Notification Found</string>
    <string name="payment">Payment</string>
    <string name="work_completed">Work Completed</string>
    <string name="apply_coupon_code">Apply Coupon Code</string>
    <string name="write_code_here">Write Code Here</string>
    <string name="total_amount">Total Amount</string>
    <string name="online_payment">Web Payment</string>
    <string name="or">OR</string>
    <string name="cash_payment1">Cash Payment</string>
    <string name="post_job">New Job</string>
    <string name="price">Price</string>
    <string name="budget">Budget</string>
    <string name="add_picture">Add Picture</string>
    <string name="post">Post</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="change">Change</string>
    <string name="personal_information">Personal Information</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="gender">Gender</string>
    <string name="password_change">Change Password</string>
    <string name="set_address">Set Address</string>
    <string name="enter_your_address">Enter Your Address</string>
    <string name="full_address">Full Address</string>
    <string name="select_address">Select Address</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="set_location">Set Location</string>
    <string name="sign_out">SignOut</string>
    <string name="promotion">Promotion</string>
    <string name="apply_code1">Apply Code</string>
    <string name="email_address1">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_password">Your Password</string>
    <string name="forgotten_password">Forgotten Password?</string>
    <string name="didn_t_have_any_account">Don\'t have an account?</string>
    <string name="first_name">Full Name</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="and">and</string>
    <string name="agreed">Yes, I have read and agreed to the </string>
    <string name="home_features">Home Features</string>
    <string name="bookings_and_job">Bookings &amp; Jobs</string>
    <string name="personal">Personal</string>
    <string name="category">Category</string>
    <string name="currency_msg">Currency</string>
    <string name="filter_artist">Filter Artisans</string>
    <string name="select_currency">Select Currency</string>
    <string name="filter_category">Click here to filter by Category</string>
    <string name="filter_currency">Click here to filter by Currency</string>
    <string name="min_to_max">Price(Min to Max)</string>
</resources>