<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.wokconns.customer.utils.CustomTextView
                    android:id="@+id/ctvbTitle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/filter_artist"
                    android:textColor="@color/black_off"
                    android:textSize="@dimen/_14sdp" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/gray_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <com.wokconns.customer.utils.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/category"
                    android:textColor="@color/black_off"
                    android:textSize="@dimen/_14sdp" />

                <com.wokconns.customer.utils.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_category"
                    android:textColor="@color/black_off"
                    android:textSize="@dimen/_12sdp" />

                <com.wokconns.customer.utils.CustomEditText
                    android:id="@+id/etCategoryD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/edittext_bg_profile"
                    android:drawableEnd="@drawable/ic_drop_down"
                    android:editable="false"
                    android:hint="@string/select_category"
                    android:padding="@dimen/_7sdp"
                    android:singleLine="true"
                    android:text=""
                    android:textSize="@dimen/_13sdp" />

                <com.wokconns.customer.utils.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/currency_msg"
                    android:textColor="@color/black_off"
                    android:textSize="@dimen/_14sdp" />

                <com.wokconns.customer.utils.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_currency"
                    android:textColor="@color/black_off"
                    android:textSize="@dimen/_12sdp" />

                <com.wokconns.customer.utils.CustomAutoCompleteTextView
                    android:id="@+id/etCurrencyD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/edittext_bg_profile"
                    android:drawableEnd="@drawable/ic_drop_down"
                    android:editable="false"
                    android:focusable="false"
                    android:hint="@string/select_currency"
                    android:padding="@dimen/_7sdp"
                    android:singleLine="true"
                    android:text=""
                    android:textSize="@dimen/_13sdp" />

                <com.wokconns.customer.utils.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/min_to_max"
                    android:textColor="@color/black_off"
                    android:textSize="@dimen/_14sdp" />

                <com.warkiz.widget.IndicatorSeekBar
                    android:id="@+id/seek_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    app:isb_max="1000"
                    app:isb_min="0"
                    app:isb_progress="0"
                    app:isb_seek_smoothly="true"
                    app:isb_ticks_count="2"
                    app:isb_show_tick_marks_type="oval"
                    app:isb_tick_marks_size="13dp"
                    app:isb_tick_marks_drawable="@drawable/ic_vertical_line"
                    app:isb_show_tick_texts="true"
                    app:isb_tick_texts_size="15sp"
                    app:isb_tick_texts_color="@color/colorPrimary"
                    app:isb_thumb_color="@color/colorPrimary"
                    app:isb_thumb_size="20dp"
                    app:isb_show_indicator="rounded_rectangle"
                    app:isb_indicator_color="@color/gray"
                    app:isb_indicator_text_color="@color/white"
                    app:isb_indicator_text_size="@dimen/_12sdp"
                    app:isb_track_background_color="@color/gray"
                    app:isb_track_background_size="0.5dp"
                    app:isb_track_progress_color="@color/colorPrimary"
                    app:isb_track_progress_size="4dp"
                    app:isb_only_thumb_draggable="false"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="35dp"
                android:background="@color/gray_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:orientation="horizontal">

                <com.wokconns.customer.utils.CustomTextView
                    android:id="@+id/tvCancel"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textSize="18sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/gray_line" />

                <com.wokconns.customer.utils.CustomTextView
                    android:id="@+id/tvSubmit"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/submit"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>
</layout>