<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:background="@drawable/dialog_back"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/disclaimerTitleLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_43sdp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/dialog_back_blue">

            <com.wokconns.customer.utils.CustomTextView
                android:id="@+id/disclaimerTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/disclaimer_title"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/disclaimerMessageLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/disclaimerTitleLayout"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_10sdp">

            <com.wokconns.customer.utils.CustomTextView
                android:id="@+id/disclaimerMessage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoSizeMinTextSize="14sp"
                android:contextClickable="true"
                android:gravity="center"
                android:text="@string/disclaimer_message"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/black"
                android:textIsSelectable="true"
                android:textSize="17sp"
                tools:targetApi="o" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/termsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/disclaimerMessageLayout"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp">

            <LinearLayout
                android:id="@+id/termsLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-10dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <CheckBox
                    android:id="@+id/termsCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agreed"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/termsLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.wokconns.customer.utils.CustomTextViewBold
                    android:id="@+id/tvTerms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/terms_of_use"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />

                <com.wokconns.customer.utils.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/and"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <com.wokconns.customer.utils.CustomTextViewBold
                    android:id="@+id/tvPrivacy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonsLayout"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:layout_below="@id/termsLayout"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_10sdp">

            <Button
                android:id="@+id/cancelButton"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/consentButton"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/i_understand"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>
</layout>