<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.wokconns.customer.ui.fragment.GetDiscountActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp"
        app:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp">

            <com.wokconns.customer.utils.CustomTextViewBold
                android:id="@+id/CTVBaplycode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apply_code" />

            <com.wokconns.customer.utils.CustomTextView
                android:id="@+id/CTVdescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/CTVBaplycode"
                android:layout_marginTop="5dp"
                android:text="" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/CTVdescription"
                android:layout_marginTop="20dp"
                android:background="@color/light_gray">

                <com.wokconns.customer.utils.CustomTextViewBold
                    android:id="@+id/CTVBcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="" />

                <com.wokconns.customer.utils.CustomTextViewBold
                    android:id="@+id/CTVBcopy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:padding="10dp"
                    android:text="@string/copy"
                    android:textColor="@color/colorPrimary" />


            </RelativeLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <com.wokconns.customer.utils.CustomButton
        android:id="@+id/CBinvitefriend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card"
        android:layout_margin="15dp"
        android:background="@drawable/buttongradient2"
        android:text="@string/invite_friend"
        android:textColor="@color/white" />


</RelativeLayout>